<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bciNeuroskyService</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

      <string name="pref_backend_profile_id_title">Profile ID</string>
	  <string name="pref_backend_profile_id_summary">Your profile ID on the EEG backend</string>
	  <string name="pref_backend_profile_id_dialog_title">Profile ID</string>
	  <string name="pref_backend_profile_id_dialog_message">Enter profile ID</string>
	  
	  <string name="pref_backend_exercise_id_title">Exercise ID</string>
	  <string name="pref_backend_exercise_id_summary">Your exercise ID on the EEG backend</string>
	  <string name="pref_backend_exercise_id_dialog_title">Exercise ID</string>
	  <string name="pref_backend_exercise_id_dialog_message">Enter exercise ID</string>
	  
	  <string name="pref_backend_token_title">Token</string>
	  <string name="pref_backend_token_summary">Your token to access EEG backend API</string>
	  <string name="pref_backend_token_dialog_title">Token</string>
	  <string name="pref_backend_token_dialog_message">Enter token</string>
	  
	  <string name="pref_backend_host_title">Backend host</string>
	  <string name="pref_backend_host_summary">Host name without http(s):// and /</string>
	  <string name="pref_backend_host_dialog_title">Host</string>
	  <string name="pref_backend_host_dialog_message">Enter host name</string>
	  
	        
	  <string name="pref_backend_netuser_profile_id_title">Profile ID</string>
	  <string name="pref_backend_netuser_profile_id_summary"></string>
	  <string name="pref_backend_netuser_profile_id_dialog_title">Network User Profile ID</string>
	  <string name="pref_backend_netuser_profile_id_dialog_message">Enter Network User profile ID</string>
	  
	  <string name="pref_backend_netuser_exercise_id_title">Exercise ID</string>
	  <string name="pref_backend_netuser_exercise_id_summary"></string>
	  <string name="pref_backend_netuser_exercise_id_dialog_title">Network User Exercise ID</string>
	  <string name="pref_backend_netuser_exercise_id_dialog_message">Enter Network User exercise ID</string>
	  
	  
	  
	  <string name="pref_settings_player2_title">Network Player 2</string>
	  <string name="pref_settings_player3_title">Network Player 3</string>
	  <string name="pref_settings_player4_title">Network Player 4</string>
	  
	  
	  
	  <string name="pref_use_backend_title">Use EEG backend</string>
	  <string name="pref_use_backend_summary">Send data to EEG backend API</string>
	  
	  <string name="pref_backend_settings_title">Local Player: EEG backend configuration</string>
	  
	  <string name="pref_use_competitivegame_title">SetUp EEG Competitive Game</string>
	  <string name="pref_use_competitivegame_summary">SetUp 2nd user Exercise ID</string>
	  
	  <string name="pref_use_cooperationgame_title">SetUp EEG Cooperation Game</string>
	  <string name="pref_use_cooperationgame_summary">SetUp 2nd user Exercise ID</string>
	  
	   <string name="pref_Att_settings_title">Manually adjust Attention threshold </string>
	  
	  <string name="pref_att_warning_title">WARNING threshold </string>
	  <string name="pref_att_warning_summary">Select "warning" threshold for Attention </string>
	  
	  <string name="pref_att_critical_title">CRITICAL threshold</string>
	  <string name="pref_att_critical_summary">Select "critical" threshold for Attention </string>
	  
</resources>
